<resources>
    <string name="app_name">Holiday Planner</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_backup">Backup</string>
    <string name="action_add_attraction">Add Attraction</string>
    <string name="action_add_attractionarea">Add Attraction Area</string>
    <string name="action_add_contact">Add Contact</string>
    <string name="action_add_day">Add Day</string>
    <string name="action_add_flight">Add Flight</string>
    <string name="action_add_holiday">Add Holiday</string>
    <string name="action_add_hotel">Add Hotel</string>
    <string name="action_add_show">Add Show</string>
    <string name="action_add_restaurant">Add Restaurant</string>
    <string name="action_add_budget">Add Budget</string>
    <string name="action_add_bus">Add Bus</string>
    <string name="action_add_cinema">Add Cinema</string>
    <string name="action_add_park">Add Park</string>
    <string name="action_add_parade">Add Parade</string>
    <string name="action_add_other">Add Other</string>
    <string name="action_add_ride">Add Ride</string>
    <string name="action_add_task">Add Task</string>
    <string name="action_add_tip">Add Tip</string>
    <string name="action_add_tipgroup">Add Tip Group</string>
    <string name="action_add_generalattraction">Add Event</string>
    <string name="action_add_extra_files">Add</string>
    <string name="action_delete_holiday">Delete Holiday</string>
    <string name="action_delete_flight">Delete Flight</string>
    <string name="action_delete_hotel">Delete Hotel</string>
    <string name="action_delete_bus">Delete Bus</string>
    <string name="action_delete_restaurant">Delete Restaurant</string>
    <string name="action_delete_cinema">Delete Cinema</string>
    <string name="action_delete_day">Delete Day</string>
    <string name="action_delete_park">Delete Park</string>
    <string name="action_delete_parade">Delete Parade</string>
    <string name="action_delete_other">Delete Other</string>
    <string name="action_delete_ride">Delete Ride</string>
    <string name="action_delete_generalattraction">Delete Event</string>
    <string name="action_delete_extra_files">Delete</string>
    <string name="action_delete_show">Delete Show</string>
    <string name="action_delete_task">Delete Task</string>
    <string name="action_delete_budget">Delete Budget</string>
    <string name="action_delete_tipgroup">Delete Tip Group</string>
    <string name="action_delete_tip">Delete Tip</string>
    <string name="action_delete_attraction">Delete Attraction</string>
    <string name="action_delete_attractionarea">Delete Attraction Area</string>
    <string name="action_delete_contact">Delete Contact</string>
    <string name="action_delete_restaurantfull">Delete Restaurant</string>
    <string name="action_delete_notes">Delete Notes</string>
    <string name="action_edit_bus">Edit Bus</string>
    <string name="action_edit_cinema">Edit Cinema</string>
    <string name="action_edit_hotel">Edit Hotel</string>
    <string name="action_edit_extra_files">Edit</string>
    <string name="action_edit_flight">Edit Flight</string>
    <string name="action_edit_restaurant">Edit Restaurant</string>
    <string name="action_edit_holiday">Edit Holiday</string>
    <string name="action_edit_day">Edit Day</string>
    <string name="action_edit_notes">Edit Notes</string>
    <string name="action_edit_task">Edit Task</string>
    <string name="action_edit_attractionarea">Edit Attraction Area</string>
    <string name="action_edit_contact">Edit Contact</string>
    <string name="action_edit_restaurantfull">Edit Restaurant</string>
    <string name="action_edit_budget">Edit Budget</string>
    <string name="action_edit_ride">Edit Ride</string>
    <string name="action_edit_generalattraction">Edit Event</string>
    <string name="action_edit_show">Edit Show</string>
    <string name="action_edit_tipgroup">Edit Tip Group</string>
    <string name="action_edit_tip">Edit Tip</string>
    <string name="action_edit_attraction">Edit Attraction</string>
    <string name="action_edit_other">Edit Other</string>
    <string name="action_edit_parade">Edit Parade</string>
    <string name="action_edit_park">Edit Park</string>
    <string name="action_orphaned_images">Orphaned Images</string>
    <string name="action_view_tipgroup">View Tip Group</string>
    <string name="action_view_attraction">View Attraction</string>
    <string name="action_view_attractionarea">View Attraction Area</string>
    <string name="action_move">Move to Another Day</string>
    <string name="action_tasks">View Tasks</string>
    <string name="action_budget">View Budget</string>
    <string name="action_tips">View Tips</string>

    <string name="settings_date_format">dd/MM/yyyy</string>

    <string name="title_planner">Holiday Planner</string>
    <string name="title_version">v1.0</string>
    <string name="title_waitingforpermission">Waiting for Permission</string>

    <string name="tab_schedule">Schedule</string>
    <string name="tab_highlights">Highlights</string>

    <string name="dates_known">Dates Known</string>
    <string name="dates_not_known">Dates Not Known</string>
    <string name="date_known">Date Known</string>
    <string name="date_not_known">Date Not Known</string>

    <string name="fmt_day_line">Day %d</string>
    <string name="fmt_date_line">%s</string>
    <string name="fmt_hr_line">%d Hr</string>
    <string name="fmt_hrs_line">%d Hrs</string>
    <string name="zero_time">00:00</string>
    <string name="booking_ref">Booking Ref</string>
    <string name="bus_arrives">Bus Arrives</string>
    <string name="bus_details">Bus Details</string>
    <string name="checkbox">CheckBox</string>
    <string name="checkbox3">CheckBox</string>
    <string name="description">Desc</string>
    <string name="journey_ends">Journey Ends</string>
    <string name="save">Save</string>
    <string name="attached_file">Attached File</string>

    <string name="schedule_unknown">Unknown</string>
    <string name="schedule_easy">Easy</string>
    <string name="schedule_moderate">Moderate</string>
    <string name="schedule_vbusy">V Busy</string>

    <string name="caption_dayname">Day Name</string>
    <string name="caption_taskname">Task Name</string>
    <string name="caption_taskdate">Task Date</string>
    <string name="caption_taskcomplete">Task Complete</string>
    <string name="caption_tipgroupdescription">Description</string>
    <string name="caption_tipdescription">Description</string>
    <string name="caption_notes">Notes</string>
    <string name="caption_budget_total">Budget Total</string>
    <string name="caption_budget_paid">Budget Paid</string>
    <string name="caption_budget_unpaid">Budget Unpaid</string>
    <string name="caption_budget_total_marker">Total</string>
    <string name="caption_zero">0</string>
    <string name="caption_contactdescription">Description</string>
    <string name="caption_attractionareadescription">Description</string>
    <string name="ReservationTypeJustWalkIn">No need to book</string>
    <string name="ReservationTypeReserveOnTheDay">Book as early as possible on the day</string>
    <string name="ReservationTypeReserve180DaysInAdvance">Need to book in advance</string>
    <string name="ReservationTypeBooked">***Booked***</string>
    <string name="caption_budget_option">Budget Option</string>
    <string name="type">Type</string>
    <string name="todo">TODO</string>
    <string name="attraction_details">Event</string>
    <string name="reservation_type">Reservation Type</string>
    <string name="flight_no">Flight No</string>
    <string name="terminal">Terminal</string>
    <string name="check_in_time">Check In Time</string>
    <string name="departs">Departs</string>
    <string name="arrival_time">Arrival Time</string>
    <string name="pickup_time">Pickup Time</string>
    <string name="drop_off_time">Drop Off Time</string>
    <string name="end_time">End Time</string>
    <string name="unknown">Unknown</string>
    <string name="no_need_to_book">No Need to Book</string>
    <string name="book_on_same_day">Book on Same Day</string>
    <string name="book_in_advance">Book in Advance</string>
    <string name="booked">Booked</string>
    <string name="start_time">Start Time</string>
    <string name="imageviewsmall">imageViewSmall</string>
    <string name="btnshowinfo">btnShowInfo</string>
    <string name="textview">TextView</string>
    <string name="internalimage">internalImage</string>
    <string name="imgicon">imgIcon</string>
    <string name="floatingactionbutton">floatingActionButton</string>
    <string name="mylogo">mylogo</string>
    <string name="main_title">Main Title</string>
    <string name="sub_title">Sub Title</string>
    <string name="notes">Notes</string>
    <string name="edit_notes">Edit Notes</string>
    <string name="dates">Dates</string>
    <string name="holiday_name">Holiday Name</string>
    <string name="known_dates">Known Dates</string>
    <string name="start_date">Start Date</string>
    <string name="days">Days</string>
    <string name="maps">Maps</string>
    <string name="tasks">Tasks</string>
    <string name="tips">Tips</string>
    <string name="budget">Budget</string>
    <string name="attractions">Attractions</string>
    <string name="contacts">Contacts</string>
    <string name="day_name">Day Name</string>
    <string name="busy">Busy</string>
    <string name="task_name">Task Name</string>
    <string name="known_date">Known Date</string>
    <string name="task_date">Task Date</string>
    <string name="task_complete">Task Complete</string>
    <string name="only_outstanding_tasks">Only Outstanding Tasks</string>
    <string name="task_description">Task Description</string>
    <string name="budget_description">Budget Description</string>
    <string name="total">Total</string>
    <string name="paid">Paid</string>
    <string name="unpaid">Unpaid</string>
    <string name="add_a_budget">Add a Budget</string>
    <string name="only_outstanding_budgets">Only Outstanding Budgets</string>
    <string name="_99">99</string>
    <string name="theme_park">Theme Park</string>
    <string name="theme_park_area">Theme Park Area</string>
    <string name="theme_park_areas">Theme Park Areas</string>
    <string name="theme_parks">Theme Parks</string>
    <string name="poi">POI</string>
    <string name="points_of_interest">Points of Interest</string>
    <string name="active">Active</string>
    <string name="only_active_budgets">Only Active Budgets</string>
    <string name="inactive">Inactive</string>
    <string name="lblActive">Active</string>
    <string name="lblInactive">Inactive</string>

</resources>
