<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_delete_generalattraction"
        android:orderInCategory="100"
        android:title="@string/action_delete_generalattraction"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_edit_generalattraction"
        android:orderInCategory="100"
        android:title="@string/action_edit_generalattraction"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_move"
        android:orderInCategory="100"
        android:title="@string/action_move"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_task"
        android:orderInCategory="100"
        android:title="@string/action_tasks"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_budget"
        android:orderInCategory="100"
        android:title="@string/action_budget"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_tips"
        android:orderInCategory="100"
        android:title="@string/action_tips"
        app:showAsAction="never" />
</menu>