<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_holiday_details_form"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <include layout="@layout/my_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="?attr/actionBarSize"
        android:orientation="vertical" >

        <include
            layout="@layout/included_schedule_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/grpActive"
            style="@style/MyBox" >

            <TextView
                android:id="@+id/lblActive"
                android:text="@string/active"
                style="@style/MyTextHint" />

            <Switch
                android:id="@+id/swActive"
                style="@style/MyTextLine"
                android:layout_width="wrap_content"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/grpBudgetDescription"
            style="@style/MyBox" >

            <TextView
                android:id="@+id/lblBudgetDescription"
                android:text="@string/budget_description"
                style="@style/MyTextHint" />

            <TextView
                android:id="@+id/txtBudgetDescription"
                style="@style/MyTextLine" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/grpBudgetTotal"
            style="@style/MyBox" >

            <TextView
                android:id="@+id/lblBudgetTotal"
                android:text="@string/caption_budget_total"
                style="@style/MyTextHint" />

            <TextView
                android:id="@+id/txtBudgetTotal"
                style="@style/MyTextLine" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/grpBudgetPaid"
            style="@style/MyBox" >

            <TextView
                android:id="@+id/lblBudgetPaid"
                android:text="@string/caption_budget_paid"
                style="@style/MyTextHint" />

            <TextView
                android:id="@+id/txtBudgetPaid"
                style="@style/MyTextLine" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/grpBudgetUnpaid"
            style="@style/MyBox" >

            <TextView
                android:id="@+id/lblBudgetUnpaid"
                android:text="@string/caption_budget_unpaid"
                style="@style/MyTextHint" />

            <TextView
                android:id="@+id/txtBudgetUnpaid"
                style="@style/MyTextLine" />

        </LinearLayout>

                <Button
                    android:id="@+id/btnSave"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/save" />

        </LinearLayout>

        </ScrollView>

    </LinearLayout>

</RelativeLayout>
