<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                 xmlns:app="http://schemas.android.com/apk/res-auto"
                                                 xmlns:tools="http://schemas.android.com/tools"
                                                 android:layout_width="match_parent"
                                                 android:layout_height="match_parent">

    <include layout="@layout/my_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginVertical="?attr/actionBarSize"
        android:orientation="vertical">

        <include
            layout="@layout/included_schedule_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:id="@+id/grpHolidayName"
            android:orientation="vertical"
            android:baselineAligned="false"
            android:layout_margin="10dp"
            style="@style/MyBox">

            <TextView
                android:id="@+id/lblHolidayName"
                android:text="@string/holiday_name"
                style="@style/MyTextHint"/>

            <TextView
                android:id="@+id/txtHolidayName"
                style="@style/MyTextLine"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/grpKnownDates"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="false"
            android:layout_margin="10dp"
            style="@style/MyBox">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/lblKnownDates"
                    android:text="@string/known_dates"
                    style="@style/MyTextHint"/>

                <Switch
                    android:id="@+id/swKnownDates"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="toggleVisibility"
                    tools:ignore="UseSwitchCompatOrMaterialXml" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/grpStartDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/lblStartDate"
                    android:text="@string/start_date"
                    style="@style/MyTextHint"/>

                <TextView
                    android:id="@+id/txtStartDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style = "@style/MyTextLine" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/grpSwitches"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:baselineAligned="false"
            android:layout_margin="10dp"
            style="@style/MyBox">

            <LinearLayout
                android:id="@+id/grpSwitchLine1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/lblDays"
                        style="@style/MyTextHint"
                        android:text="@string/days" />

                    <Switch
                        android:id="@+id/swDays"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="toggleVisibility"
                        tools:ignore="UseSwitchCompatOrMaterialXml" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/lblMaps"
                        style="@style/MyTextHint"
                        android:text="@string/maps" />

                    <Switch
                        android:id="@+id/swMaps"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="toggleVisibility"
                        tools:ignore="UseSwitchCompatOrMaterialXml" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/lblTasks"
                        style="@style/MyTextHint"
                        android:text="@string/tasks" />

                    <Switch
                        android:id="@+id/swTasks"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="toggleVisibility"
                        tools:ignore="UseSwitchCompatOrMaterialXml" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/lblTips"
                        style="@style/MyTextHint"
                        android:text="@string/tips" />

                    <Switch
                        android:id="@+id/swTips"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="toggleVisibility"
                        tools:ignore="UseSwitchCompatOrMaterialXml" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/grpSwitchLine2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/lblBudget"
                        style="@style/MyTextHint"
                        android:text="@string/budget" />

                    <Switch
                        android:id="@+id/swBudget"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="toggleVisibility"
                        tools:ignore="UseSwitchCompatOrMaterialXml" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/lblAttractions"
                        style="@style/MyTextHint"
                        android:text="@string/theme_parks" />

                    <Switch
                        android:id="@+id/swAttractions"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="toggleVisibility"
                        tools:ignore="UseSwitchCompatOrMaterialXml" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/lblContacts"
                        style="@style/MyTextHint"
                        android:text="@string/contacts" />

                    <Switch
                        android:id="@+id/swContacts"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="toggleVisibility"
                        tools:ignore="UseSwitchCompatOrMaterialXml" />

                </LinearLayout>


            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnSave"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="saveHoliday"
                android:text="@string/save" />
        </LinearLayout>

        <CheckBox
            android:id="@+id/picturePicked"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="CheckBox"
            android:visibility="gone" />

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
