<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:id="@+id/activity_holiday_details_form"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <include layout="@layout/my_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="?attr/actionBarSize"
        android:orientation="vertical">

    <include
        layout="@layout/included_schedule_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

        <LinearLayout
            android:id="@+id/grpTipDescription"
            style="@style/MyBox"
            android:layout_marginHorizontal="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/lblTipDescription"
                android:text="@string/description"
                style="@style/MyTextHint" />

            <TextView
                android:id="@+id/txtTipDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/description"
                android:gravity="start"
                android:ems="10"
                style="@style/MyTextListLine" />

        </LinearLayout>

    <LinearLayout
        android:id="@+id/grpTipNotes"
        style="@style/MyBox"
        android:layout_marginHorizontal="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/lblTipNotes"
            android:text="@string/notes"
            style="@style/MyTextHint" />

        <TextView
            android:id="@+id/txtTipNotes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/edit_notes"
            android:gravity="start"
            android:ems="10"
            style="@style/MyTextListLine"/>

    </LinearLayout>

    <include
        layout="@layout/included_schedule_footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    </LinearLayout>
</RelativeLayout>
